--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "file-saver": "^2.0.1",
     "font-awesome": "^4.7.0",
     "foundation-sites": "^6.5.3",
-    "html2canvas": "^1.0.0-alpha.12",
+    "html2canvas": "^1.0.0-rc.5",
     "jszip": "^3.2.1",
     "ng2-pdfjs-viewer": "^5.0.1",
     "ngx-chips": "2.0.0-beta.0",
